vaishnavsh/src/components/Home/Home.scss
@use "../../Variables";

.header {
    display: flex;
    height: 100vh;

    .left {
        margin-top: 15%;
        margin-bottom: 15%;
        // position: relative;
        // left: 7rem;
        // width: 40%;
        z-index: 6;
        flex: 1;
        h4 {
            color: Variables.$highlight;
            margin-top: 0px;
            margin-bottom: 5px;
        }
        .header-name {
            font-size: 3rem;
            font-weight: 500;
            margin: 0px;
        }
        .header-about {
            font-size: 1.75rem;
            font-weight: 300;
            margin-top: 0px;
            color: Variables.$light-white;
        }
        .header-quick-nav {
            display: flex;
            gap: 20px;
            margin-bottom: 30px;
            .quick-nav-item {
                font-size: 1.5rem;
                color: white;
                &:hover {
                    @include Variables.glow;
                }
            }
        }
    }

    .right {
        // position: relative;
        // right: 0;
        // width: 50%;
        // height: 80%;
        flex: 1;
        z-index: 5;
        .loading {
            display: flex;
            justify-content: center;
            align-items: center;
            height: 100%;
            color: white;
        }
    }
}


@media all and (max-width:755px){
    .header {
        height: 100vh;
        .left {
            text-align: center;
            margin-top: 0px !important;
            padding-top: 180px;
            .header-quick-nav {
                justify-content: center;
            }
        }
        .right {
            display: none;
        }
    }
}

